# dr_octopus_ws

./: BUILD.md
.deprecated/: assemble_arm.py  assemble_global.py  assembled_preview.blend1  assembly_params.json  assembly_tree_full.json  dr_octopus.md  joint_data.json  joint_offsets_cad.json  joint_origins_global.json  joint_positions.json  joint_positions_cad.json  joint_positions_final.json  joint_positions_v2.json  joint_positions_v3.json  joint_positions_v4.json  joint_positions_v5.json  link_transforms.json  motor_positions_cad.json  motor_positions_cad_final.json  phobos_kinematics.json  phobos_kinematics_v2.json
.deprecated/meshes_from_step/: EE_Sub_Assembly_RB1 - 副本.stl  L0R.stl  L1R.stl  L2R.stl  L3_2.stl  L41.stl  L5R.stl  cbe3-5_EE_Sub_Assembly_RB1 - 副本.stl  dbsy4-5-4_EE_Sub_Assembly_RB1 - 副本_2.stl  mr126zz_EE_Sub_Assembly_RB1 - 副本.stl  rse2b10-155_block_EE_Sub_Assembly_RB1 - 副本.stl  rse2b10-155_rail_EE_Sub_Assembly_RB1 - 副本.stl
.deprecated/meshes_global/: EE_Sub_Assembly^RB1 - 副本.stl  L0R.stl  L1R.stl  L2R.stl  L3.stl  L3_part2.stl  L4.stl  L41.stl  L5R.stl  L6R.stl  L7R.stl  cbe3-5^EE_Sub_Assembly_RB1 - 副本.stl  dbsy4-5-4^EE_Sub_Assembly_RB1 - 副本.stl  mr126zz^EE_Sub_Assembly_RB1 - 副本.stl  (+2 more)
src/dr_octopus_description/: CMakeLists.txt  package.xml
src/dr_octopus_description/launch/: view.launch.py
src/dr_octopus_description/meshes/arm/v10/visual/: link0.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae
src/dr_octopus_description/rviz/: view.rviz
src/dr_octopus_description/urdf/: dr_octopus.urdf
(+68 files in other folders)
