<?xml version="1.0"?>
<package format="3">
  <name>dr_octopus_description</name>
  <version>0.1.0</version>
  <description>Dr Octopus dual arm description (9-DOF + EE per arm)</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
